<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/login_tv"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/please_login_tv"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/custom_edit_text"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email_address_tv"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username_et_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/example_mail_tv"
                android:padding="14dp"
                android:textColorHighlight="@color/cardview_light_background"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password_tv"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_et_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:drawablePadding="8dp"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:drawableTint="@color/gray_ft"
                android:hint="@string/password_stars"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColorHighlight="@color/cardview_light_background"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <CheckBox
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:buttonTint="@color/blue"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/remember_me_tv"
                    android:layout_gravity="center"
                    android:textColor="@color/blue_50"
                    android:textSize="11sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forgot_password_tv"
                    android:textColor="@color/blue_50"
                    android:textSize="11sp" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue"
                android:text="@string/login_btn_txt"
                android:textColor="@color/white"
                android:background="@drawable/custom_edit_text"
                app:cornerRadius="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered_tv"
                    android:textColor="@color/gray_ft"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/signup_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_tv"
                    android:paddingStart="5dp"
                    android:textColor="@color/blue_50"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>